dggridR v3.1.0 
===============
* Removed dplyr, rlang and sp as dependencies to make the package more 
  lightweight and up to date (sp is depreciated)
* Added collapse and s2 as dependencies (incurring 0 additional dependencies) 
  yielding significant performance gains, especially in grid materialization
* Function dgshptogrid now also allows passing an sf data frame in memory, 
  in addition to a shapefile saved to disc
* Fixed a numeric precision issue on Apple silicon computers (#63)
* These changes were made by Sebastian Krantz

dggridR v3.0.0  (Release date: 2023-01-02)
===============
* Fixes memory leaks in DGGRID
* Switches to using sf package from rgdal
* Removed `dgtransform`, which was previously deprecated. Use `dgGEO_to_SEQNUM` instead.
* Many changes to satisfy CRAN's capricious demands.
* Incorporates fixes from Edzer Pebesma (thanks!)

dggridR v2.0.8  (Release date: 2020-11-25)
===============
* Still trying to get CRAN upload to work

dggridR v2.0.7  (Release date: 2020-11-25)
===============
* Fix CRAN links

dggridR v2.0.6  (Release date: 2020-10-15)
===============
* Fix CRAN warning about `streampos` deprecation.

dggridR v2.0.5  (Release date: 2020-04-30)
===============
* Update authorship information

dggridR v2.0.4  (Release date: 2020-04-29)
===============
* Fix some new warnings identified by CRAN's updated compilers.
* Added doi
* Updated shapelib


dggridR v2.0.3  (Release date: 2018-04-04)
===============
* Fix bugs in dgshptogrid() and dgrectgrid() with cellsize not being respected
* Updated authorship info for accuracy
* More helpful warning messages
* CRAN-compliant package title
* Adjusted function documentation to match behaviour
* Fixed issue with default value of `savegrid`


dggridR v2.0.2  (Release date: 2017-08-19)
===============

Changes:

* Updates dgtransform warning message to note swapped order of arguments. Sorry, Brent :-)


dggridR v2.0.1  (Release date: 2017-08-07)
===============

Changes:
