@@ -5,15 +5,17 @@
 \title{Return the coordinates constituting the boundary of cells for the
          entire Earth}
 \usage{
-dgearthgrid(dggs, savegrid = NA)
+dgearthgrid(dggs, savegrid = NA, return_sf = TRUE)
 }
 \arguments{
-\item{dggs}{A dggs object from dgconstruct()}
+\item{dggs}{A dggs object from dgconstruct().}
 
 \item{savegrid}{If savegrid is set to a file path, then a shapefile
 containing the grid is written to that path and the filename
 is returned. No other manipulations are done.
 Default: NA (do not save grid, return it)}
+
+\item{return_sf}{logical. If \code{FALSE}, a long-format data frame giving the coordinates of the vertices of each cell is returned. This is is considerably faster and more memory efficient than creating an sf data frame.}
 }
 \value{
 Returns an sf object.
