@@ -1,12 +1,15 @@
 dggridR v3.1.0 
 ===============
+* Fixed a numeric precision issue on Apple silicon computers (#63)
 * Removed dplyr, rlang and sp as dependencies to make the package more 
   lightweight and up to date (sp is depreciated)
 * Added collapse and s2 as dependencies (incurring 0 additional dependencies) 
   yielding significant performance gains, especially in grid materialization
 * Function dgshptogrid now also allows passing an sf data frame in memory, 
   in addition to a shapefile saved to disc
-* Fixed a numeric precision issue on Apple silicon computers (#63)
+* Functions dgcellstogrid, dgearthgrid, dgrectgrid and dgshptogrid now have an 
+  additional argument return_sf = TRUE. Setting return_sf = FALSE gives a more
+  memory efficient long data frame with the coordinates of the cell vertices.
 * These changes were made by Sebastian Krantz
 
 dggridR v3.0.0  (Release date: 2023-01-02)
